--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Configure Git (21********@ds.study.iitm.ac.in)
         run: |
           git config --global user.name "GitHub Action"
-          git config --global user.email "21******@ds.study.iitm.ac.in"
+          git config --global user.email "21f3001258@ds.study.iitm.ac.in"
 
       - name: Make a Change
         run: |
